--- a/task1/package.json
+++ b/task1/package.json
@@ -2,9 +2,12 @@
   "name": "nodejs_training",
   "version": "1.0.0",
   "description": "Nodejs Training",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon src/index.js --exec babel-node --presets es2015,stage-2",
+    "build": "babel src -d dist",
+    "serve": "node dist/index.js",
+    "lint": "eslint src/index.js || exit 0",
     "test": "test"
   },
   "repository": {
@@ -16,5 +19,14 @@
   "bugs": {
     "url": "https://github.com/EugeneCh/nodejs_training/issues"
   },
-  "homepage": "https://github.com/EugeneCh/nodejs_training#readme"
+  "homepage": "https://github.com/EugeneCh/nodejs_training#readme",
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "eslint": "^4.6.1",
+    "eslint-plugin-node": "^5.1.1",
+    "nodemon": "^1.12.0"
+  }
 }
