Added eslint support and homework

--- a/task1/.eslintrc.json
+++ b/task1/.eslintrc.json
@@ -1,7 +1,17 @@
 {
   "plugins": ["node"],
   "extends": ["eslint:recommended", "plugin:node/recommended"],
+  "parser": "babel-eslint",
+  "env": {
+    "node": true,
+    "es6": true
+  },
   "rules": {
-    "node/exports-style": ["error", "module.exports"]
+    "node/exports-style": ["error", "module.exports"],
+    "no-console":"off",
+    "node/no-unsupported-features": "off"
+  },
+  "parserOptions": {
+    "sourceType": "module"
   }
 }
