--- a/task1/package.json
+++ b/task1/package.json
@@ -2,12 +2,15 @@
   "name": "nodejs_training",
   "version": "1.0.0",
   "description": "Nodejs Training",
+  "engines": {
+    "node": ">=8.0.0"
+  },
   "main": "src/index.js",
   "scripts": {
-    "start": "nodemon src/index.js --exec babel-node --presets es2015,stage-2",
+    "start": "npm run lint && nodemon src/index.js --exec babel-node --presets es2015,stage-2",
     "build": "babel src -d dist",
     "serve": "node dist/index.js",
-    "lint": "eslint src/index.js || exit 0",
+    "lint": "eslint src/ || exit 0",
     "test": "test"
   },
   "repository": {
@@ -22,6 +25,7 @@
   "homepage": "https://github.com/EugeneCh/nodejs_training#readme",
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-eslint": "^7.2.3",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.26.0",
