--- a/task1/package.json
+++ b/task1/package.json
@@ -7,12 +7,13 @@
   },
   "main": "src/index.js",
   "scripts": {
-    "start": "npm run lint && nodemon src/index.js --exec babel-node --presets es2015,stage-2",
+    "start": "npm run lint && nodemon src/index.js --exec babel-node",
     "build": "babel src -d dist",
     "serve": "node dist/index.js",
     "lint": "eslint src/ || exit 0",
     "test": "test"
   },
+  "pre-commit": [ "lint" ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/EugeneCh/nodejs_training.git"
@@ -31,6 +32,7 @@
     "babel-register": "^6.26.0",
     "eslint": "^4.6.1",
     "eslint-plugin-node": "^5.1.1",
-    "nodemon": "^1.12.0"
+    "nodemon": "^1.12.0",
+    "pre-commit": "^1.2.2"
   }
 }
