--- a/task1/package.json
+++ b/task1/package.json
@@ -11,9 +11,9 @@
     "build": "babel src -d dist",
     "serve": "node dist/index.js",
     "lint": "eslint src/ || exit 0",
-    "test": "test"
+    "test": "test",
+    "precommit": "npm run lint"
   },
-  "pre-commit": [ "lint" ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/EugeneCh/nodejs_training.git"
@@ -32,7 +32,7 @@
     "babel-register": "^6.26.0",
     "eslint": "^4.6.1",
     "eslint-plugin-node": "^5.1.1",
-    "nodemon": "^1.12.0",
-    "pre-commit": "^1.2.2"
+    "husky": "^0.14.3",
+    "nodemon": "^1.12.0"
   }
 }
