--- a/task2/package.json
+++ b/task2/package.json
@@ -36,5 +36,9 @@
     "eslint-plugin-node": "^5.1.1",
     "nodemon": "^1.12.0",
     "pre-commit": "^1.2.2"
+  },
+  "dependencies": {
+    "csvtojson": "^1.1.8",
+    "mkdirp": "^0.5.1"
   }
 }
