--- a/task2/package.json
+++ b/task2/package.json
@@ -8,6 +8,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "npm run lint && nodemon src/index.js --exec babel-node",
+    "debug": "nodemon src/index.js --exec babel-node --inspect",
     "build": "babel src -d dist",
     "serve": "node dist/index.js",
     "lint": "eslint src/ || exit 0",
