--- a/task2/package.json
+++ b/task2/package.json
@@ -39,6 +39,7 @@
     "pre-commit": "^1.2.2"
   },
   "dependencies": {
+    "colors": "^1.1.2",
     "csvtojson": "^1.1.8",
     "mkdirp": "^0.5.1"
   }
