--- a/task3/package.json
+++ b/task3/package.json
@@ -40,11 +40,12 @@
   },
   "dependencies": {
     "colors": "^1.1.2",
+    "csv-parse": "^1.2.4",
     "csvtojson": "^1.1.8",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
     "request": "^2.83.0",
-    "split": "^1.0.1",
+    "split2": "^2.2.0",
     "through2": "^2.0.3"
   }
 }
