--- a/task3/package.json
+++ b/task3/package.json
@@ -39,6 +39,7 @@
     "pre-commit": "^1.2.2"
   },
   "dependencies": {
+    "async": "^2.5.0",
     "colors": "^1.1.2",
     "csvtojson": "^1.1.8",
     "minimist": "^1.2.0",
