--- a/task4/package.json
+++ b/task4/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "colors": "^1.1.2",
     "csvtojson": "^1.1.8",
+    "express": "^4.16.2",
     "mkdirp": "^0.5.1"
   }
 }
