--- a/task5/package.json
+++ b/task5/package.json
@@ -39,7 +39,9 @@
     "pre-commit": "^1.2.2"
   },
   "dependencies": {
+    "body-parser": "^1.18.2",
     "colors": "^1.1.2",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "jsonwebtoken": "^8.1.0"
   }
 }
