--- a/task6/package.json
+++ b/task6/package.json
@@ -48,6 +48,8 @@
     "passport-google-oauth20": "^1.0.0",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
+    "pg": "^7.4.0",
+    "pg-hstore": "^2.3.2",
     "sequelize": "^4.22.6"
   }
 }
