--- a/task6/package.json
+++ b/task6/package.json
@@ -50,6 +50,7 @@
     "passport-twitter": "^1.0.4",
     "pg": "^7.4.0",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^4.22.6"
+    "sequelize": "^4.22.6",
+    "sequelize-cli": "^3.0.0"
   }
 }
