--- a/task7/package.json
+++ b/task7/package.json
@@ -42,6 +42,7 @@
     "body-parser": "^1.18.2",
     "colors": "^1.1.2",
     "express": "^4.16.2",
+    "faker": "^4.1.0",
     "jsonwebtoken": "^8.1.0",
     "mongoose": "^4.13.4",
     "passport": "^0.4.0",
